<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.mall.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hjq.bar.TitleBar
            android:id="@+id/titleBar"
            style="@style/TitleTransparent"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBarListener="@{`default`}" />

        <com.mall.libcommon.widget.SearchEditText
            android:id="@+id/login_edit_phone"
            style="@style/LoginEdit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_bg_invatation_code"
            android:hint="@string/login_invitation_code"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="11"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBar" />

        <ImageView
            android:id="@+id/login_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_desc"
            android:src="@mipmap/login_z_xing_open"
            app:layout_constraintBottom_toBottomOf="@+id/login_edit_phone"
            app:layout_constraintEnd_toEndOf="@+id/login_edit_phone"
            app:layout_constraintTop_toTopOf="@+id/login_edit_phone" />

        <TextView
            android:id="@+id/login_invitation"
            style="@style/LoginBtn"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_bind_code"
            app:layout_constraintEnd_toEndOf="@+id/login_edit_phone"
            app:layout_constraintStart_toStartOf="@+id/login_edit_phone"
            app:layout_constraintTop_toBottomOf="@+id/login_edit_phone" />

        <TextView
            style="@style/LoginWarnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()->viewmodel.queryUserByInvitationCode()}"
            android:text="@string/login_skip_input_code"
            app:layout_constraintEnd_toEndOf="@+id/login_edit_phone"
            app:layout_constraintStart_toStartOf="@+id/login_edit_phone"
            app:layout_constraintTop_toBottomOf="@+id/login_invitation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>