<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.mall.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.hjq.bar.TitleBar
            android:id="@+id/titleBar"
            style="@style/TitleTransparent"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBarListener="@{`default`}" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:contentDescription="@string/image_desc"
            android:src="@mipmap/login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBar" />

        <com.mall.libcommon.widget.SearchEditText
            android:id="@+id/login_edit_phone"
            style="@style/LoginEdit"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_bg_search_edit"
            android:hint="@string/login_hint_phone_edit"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:text="@={viewmodel.loginParams.phoneNumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <com.mall.libcommon.widget.SearchEditText
            android:id="@+id/login_edit_phone_code"
            style="@style/LoginEdit"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_bg_search_edit"
            android:hint="@string/login_hint_phone_code_edit"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:text="@={viewmodel.loginParams.authCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edit_phone" />

        <TextView
            android:id="@+id/verification_code"
            style="@style/HintText"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:onClick="@{()->viewmodel.requestCode()}"
            android:text="@{viewmodel.codeString}"
            app:layout_constraintBottom_toBottomOf="@+id/login_edit_phone_code"
            app:layout_constraintEnd_toEndOf="@+id/login_edit_phone_code"
            app:layout_constraintTop_toTopOf="@+id/login_edit_phone_code"
            tools:text="@string/login_phone_code" />

        <View
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/font_color_gray"
            app:layout_constraintBottom_toBottomOf="@+id/login_edit_phone_code"
            app:layout_constraintEnd_toStartOf="@+id/verification_code"
            app:layout_constraintTop_toTopOf="@+id/login_edit_phone_code" />

        <TextView
            android:id="@+id/login"
            style="@style/LoginBtn"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_btn"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->viewmodel.loginByPhoneCode()}"
            app:layout_constraintEnd_toEndOf="@+id/login_edit_phone_code"
            app:layout_constraintStart_toStartOf="@+id/login_edit_phone_code"
            app:layout_constraintTop_toBottomOf="@+id/login_edit_phone_code" />

        <TextView
            android:id="@+id/login_pwd"
            style="@style/LinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_by_pwd"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <View
            android:id="@+id/line"
            style="@style/LoginLine"
            android:layout_marginTop="65dp"
            app:layout_constraintEnd_toStartOf="@+id/login_thread"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login_pwd" />

        <TextView
            android:id="@+id/login_thread"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_by_thread"
            android:textColor="@color/font_color_gray"
            app:layout_constraintBottom_toBottomOf="@+id/line"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/line"
            app:layout_constraintTop_toTopOf="@+id/line" />

        <View
            android:id="@+id/line2"
            style="@style/LoginLine"
            app:layout_constraintBottom_toBottomOf="@+id/line"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toEndOf="@+id/login_thread"
            app:layout_constraintTop_toTopOf="@+id/line" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/image_desc"
            android:onClick="@{()->viewmodel.loginByWechat()}"
            android:src="@mipmap/login_wechat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_thread" />

        <TextView
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:onClick="@{viewmodel::userArgeementStateChange}"
            android:text="@string/login_agreement"
            android:textColor="@color/font_color_gray"
            app:drawableLeftCompat="@drawable/login_user_agreement"
            app:drawableStartCompat="@drawable/login_user_agreement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selected="@{viewmodel.agreementChecked}"
            app:userAgreementText="@{@string/login_agreement}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>